--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="eu"><img src="./image/eu2.png" alt=""></div>
-    <h1>Site em construção. Inspirado <a href="https://www.youtube.com/watch?v=SB9PQrOJVz4&list=PL-ZWRN7Yh0AeZPvDIYz05SV63GMK-RtRz&index=5">aqui.</a></h1>
+    <h1>Site em construção. Inspiração <a href="https://www.youtube.com/watch?v=SB9PQrOJVz4&list=PL-ZWRN7Yh0AeZPvDIYz05SV63GMK-RtRz&index=5">aqui.</a></h1>
     
     <div class="c-loader"></div> 
 </body>
